<resources>
    <string name="app_name">DietiDeals24</string>
    <string name="e_mail_input">E-Mail</string>
    <string name="password_input">Password</string>
    <string name="username_input">Nome utente</string>
    <string name="in_progress_phrase">IN CORSO</string>
    <string name="sucessfull_phrase">VENDUTA</string>
    <string name="failed_phrase">FALLITA</string>
    <string name="expired_phrase">SCADUTA</string>
    <string name="declined_phrase">RIFIUTATA</string>
    <string name="accepted_phrase">ACCETTATA</string>
    <string name="payed_phrase">PAGATA</string>
    <string name="login_phrase">Accedi</string>
    <string name="registration_phrase">Non sei ancora registrato?</string>
    <string name="or_phrase">OPPURE</string>
    <string name="registration_link"><u>Registrati</u></string>
    <string name="email_format_invalid">Formato email non valido</string>
    <string name="password_format_invalid">La password deve essere lunga almeno 6 caratteri</string>
    <string name="bottom_nav_search">Cerca</string>
    <string name="bottom_nav_create_auction">Crea asta</string>
    <string name="bottom_nav_profile">Profilo</string>
    <string name="bottom_nav_my_bids">Le tue offerte</string>
    <string name="bottom_nav_my_auctions">Le tue aste</string>
    <string name="title_mandatory_information">Informazioni obbligatorie</string>
    <string name="title_optional_information">Informazioni opzionali</string>
    <string name="title_bank_information">Informazioni bancarie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password_input">Conferma password</string>
    <string name="region_phrase">Seleziona una regione</string>
    <string name="username_format_invalid">Il nome utente non deve superare 30 carattere e può contenere solo lettere, numeri e _ ! ?</string>
    <string name="passwords_mismatch">Le password non corrispondono</string>
    <string name="email_already_exists">Email già in uso</string>
    <string name="registration_successful">Registrazione avvenuta con successo!</string>
    <string name="edit_profile_button_phrase">Modifica profilo</string>
    <string name="logout_button_phrase">Disconnettiti</string>
    <string name="edit_profile_title">Modifica Profilo</string>
    <string name="edit_region_phrase">Modifica regione</string>
    <string name="edit_bio_phrase">Modifica bio</string>
    <string name="edit_external_links_phrase">Modifica link esterni</string>
    <string name="unlock_seller_mode_phrase">Sblocca la modalità venditore</string>
    <string name="edit_bank_account_phrase">Modifica account bancario</string>
    <string name="add_bank_account_phrase">Aggiungi account bancario</string>
    <string name="add_external_link_phrase">Aggiungi link esterno</string>
    <string name="edit_url_phrase">URL</string>
    <string name="edit_url_title_phrase">Titolo</string>
    <string name="edit_external_link_phrase">Modifica link esterno</string>
    <string name="url_title_format_invalid">Il campo non può essere vuoto</string>
    <string name="url_format_invalid">il formato dell\'url non è valido</string>
    <string name="link_added">Link esterno aggiunto con successo!</string>
    <string name="edit_iban_phrase">IBAN</string>
    <string name="edit_iva_phrase">Partita IVA</string>
    <string name="iban_format_invalid">Il formato dell\'IBAN non è valido</string>
    <string name="iva_format_invalid">La partita IVA deve essere composta da 11 cifre numeriche</string>
    <string name="seller_mode_unlocked">Modalità venditore sbloccata con successo</string>
    <string name="bank_account_updated">Account bancario aggiornato con successo!</string>
    <string name="bio_updated">Bio aggiornata con successo!</string>
    <string name="region_updated">Regione aggiornata con successo!</string>
    <string name="link_updated">Link aggiornato con successo!</string>
    <string name="link_deleted">Link rimosso con successo!</string>
    <string name="switched_to_seller_account">Sei passato al tuo profilo da venditore</string>
    <string name="switched_to_buyer_account">Sei passato al tuo profilo da acquirente</string>
    <string name="search_hint">Cerca</string>
    <string name="wear_phrase">Usura</string>
    <string name="category_phrase">Categoria</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="auction_description_phrase">Aggiungi una descrizione dell\'asta</string>
    <string name="auction_type_phrase">Seleziona il tipo di asta</string>
    <string name="reverse_phrase">Inversa</string>
    <string name="home_appbar">Home AppBar</string>
    <string name="date_picker_phrase">Seleziona la data di scadenza</string>
    <string name="initial_price_phrase">Prezzo iniziale</string>
    <string name="create_reverse_auction_phrase">Crea asta inversa</string>
    <string name="zero_price">0.0€</string>
    <string name="downward_phrase">Al ribasso</string>
    <string name="silent_phrase">Silenziosa</string>
    <string name="secret_minimum_price_phrase">Prezzo minimo (Segreto)</string>
    <string name="decrement_amount_phrase">Importo del decremento</string>
    <string name="decrement_phrase">Decremento ogni:</string>
    <string name="create_downward_auction_phrase">Crea asta al ribasso</string>
    <string name="withdrawal_time_phrase">Offerte ritirabili entro:</string>
    <string name="create_silent_auction_phrase">Crea asta silenziosa</string>
    <string name="expiration_date_hint_phrase">Scade il:</string>
    <string name="buy_now_hint_phrase">Compra ora a:</string>
    <string name="reverse_auction_question">Che cos’è un\'asta inversa?</string>
    <string name="reverse_auction_description">In questo tipo di asta, il compratore specifica il prodotto/servizio richiesto, un prezzo iniziale che è disposto a pagare, e una data di scadenza. I venditori in grado di fornire quel particolare prodotto/servizio possono quindi partecipare all’asta competendo abbassando il prezzo. In particolare, fino al momento della scadenza dell’asta, i venditori possono presentare offerte al ribasso. Al momento della scadenza dell’asta, il venditore con l’offerta più bassa si aggiudica la fornitura del prodotto/servizio.</string>
    <string name="downward_auction_question">Che cos’è un\'asta al ribasso?</string>
    <string name="downward_auction_description">Un’asta al ribasso è caratterizzata da un prezzo iniziale specificato dal venditore, da un timer per il decremento del prezzo, da un importo, in €, per ciascun decremento, e da un prezzo minimo (segreto) a cui vendere il prodotto/servizio. Il prodotto/servizio sarà in vendita al prezzo iniziale stabilito dal venditore. Al raggiungimento del timer, il prezzo verrà decrementato dell’importo previsto. Il primo compratore a presentare un’offerta si aggiudica il prodotto/servizio. Se il prezzo viene decrementato fino a raggiungere il prezzo minimo segreto, l’asta viene considerata fallita.</string>
    <string name="silent_auction_question">Che cos’è un\'asta silenziosa?</string>
    <string name="silent_auction_description">In questo tipo di asta, il venditore specifica una data di scadenza e i compratori possono inviare offerte segrete al venditore. Il venditore può scegliere se accettare o rifiutare le offerte ricevute. Una sola offerta può essere accettata per ogni asta.</string>
    <string name="make_silent_bid_phrase">Fai la tua offerta</string>
    <string name="send_phrase">Invia</string>
    <string name="cvv_question">Cos’ è il codice CVV?</string>
    <string name="cvv_explanation">L’acronimo CVV sta per Card Validation (o Verification) Value e costituisce un codice di verifica della vostra carta di credito, utilizzato per garantire un ulteriore livello di sicurezza, importante in particolar modo nel caso di acquisti o altri pagamenti effettuati online. <b> È costituito da 3 cifre che si trovano sul retro della carta</b></string>
    <string name="downward_initial_price_question">Come scegliere il prezzo iniziale?</string>
    <string name="downward_initial_price_explanation">L’asta partirà con un prezzo iniziale al quale i compratori potranno comprare il bene/servizio</string>
    <string name="decrement_amount_question">Come scegliere l’importo del decremento?</string>
    <string name="decrement_amount_explanation">Allo scoccare del timer il prezzo verrà decrementato dell’importo che inserisci. L’importo del decremento non può essere maggiore del 15% del prezzo iniziale.</string>
    <string name="minimum_price_question">Come scegliere il prezzo minimo?</string>
    <string name="minimum_price_explanation">Se dopo un certo numero di decrementi il prezzo dell’asta arriva al prezzo minimo, l’asta verrà considerata fallita. Il prezzo minimo è segreto, sceglilo con cura!</string>
    <string name="reverse_initial_price_question">Come scegliere il prezzo iniziale?</string>
    <string name="reverse_initial_price_explanation">L’asta partirà con un prezzo iniziale che sei disposto a pagare per ottenere il bene/servizio. I venditori potranno competere per abbassare il prezzo.</string>
    <string name="withdrawal_time_question">Come scegliere il tempo massimo per ritirare l’offerta?</string>
    <string name="withdrawal_time_explanation">I compratori che ti faranno le offerte avranno un lasso di tempo entro e non oltre il quale potranno ritirarle se non le accetti in tempo. Sceglilo con cura!</string>
    <string name="make_reverse_bid_phrase">Offri a meno</string>
    <string name="select_payment_method_phrase">Seleziona il metodo di pagamento</string>
    <string name="credit_card_phrase">Carta di credito</string>
    <string name="credit_card_code_phrase">Codice della carta</string>
    <string name="name_phrase">Nome</string>
    <string name="surname_phrase">Cognome</string>
    <string name="go_to_summary_phrase">Vai al riepilogo</string>
    <string name="buy_phrase">COMPRA</string>
    <string name="cancel_phrase">ANNULLA</string>
    <string name="cvv_phrase">CVV</string>
    <string name="no_my_auction_phrase">Non hai \n nessun\'asta</string>
    <string name="no_my_bids_phrase">Non hai \n nessun\'offerta</string>
    <string name="no_search_auction_phrase">Nessun\'asta trovata</string>
    <string name="price_error">Il prezzo non deve avere più di 10 cifre e non deve essere vuoto</string>
    <string name="expiration_date_error">Data di scadenza non valida</string>
    <string name="auction_title_error">Il titolo dell\'asta non può essere vuoto</string>
    <string name="auction_description_error">La descrizione dell\'asta non può essere vuota</string>
    <string name="auction_wear_error">Seleziona un\'usura</string>
    <string name="auction_category_error">Seleziona una categoria</string>
    <string name="silent_auction_withdrawal_bid_time_error">Il valore non deve essere 0</string>
    <string name="downward_auction_decrement_amount_error">L\'importo di decremento non può essere più del 15% del prezzo iniziale e l\'asta non può durare meno di 30 minuti.</string>
    <string name="downward_auction_decrement_time_error">L\'asta non può durare meno di 30 minuti.</string>
    <string name="bid_error">L\'offerta non deve avere più di 10 cifre e non deve essere vuota</string>
    <string name="secret_minimum_price_error">Il prezzo segreto non può essere superiore a quello iniziale e non può essere vuoto</string>
    <string name="reverse_bid_error">L\'offerta non può essere uguale o superiore a quella corrente e non puo essere 0</string>
    <string name="card_code_error">Il numero della carta di credito deve essere di 16 cifre</string>
    <string name="name_error">Nome non valido</string>
    <string name="surname_error">Cognome non valido</string>
    <string name="cvv_error">Il cvv deve essere di 3 cifre</string>
    <string name="notification_phrase">Notifiche</string>
</resources>