<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/bottom_nav_search" />

    <item
        android:id="@+id/navigation_my_auction"
        android:icon="@drawable/ic_auction_hammer_black_24dp"
        android:title="@string/bottom_nav_my_auctions" />

    <item
        android:id="@+id/navigation_create_auction"
        android:icon="@drawable/ic_plus_black_24dp"
        android:title="@string/bottom_nav_create_auction" />

    <item
        android:id="@+id/navigation_my_bids"
        android:icon="@drawable/ic_hand_with_money_black_24dp"
        android:title="@string/bottom_nav_my_bids" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/bottom_nav_profile" />


</menu>