<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginVertical="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title_of_edit_bank_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_bank_account_phrase"
        android:textSize="@dimen/title_text_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_iban_edit_bank_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_iban_phrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_of_edit_bank_account" />

    <EditText
        android:id="@+id/edit_iva_edit_bank_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_iva_phrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_iban_edit_bank_account" />

    <ImageView
        android:id="@+id/done_button_edit_bank_account"
        android:layout_width="@dimen/icon_size_large"
        android:layout_height="@dimen/icon_size_large"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_done_button"
        android:scaleType="fitXY"
        app:tint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_iva_edit_bank_account" />

</androidx.constraintlayout.widget.ConstraintLayout>