<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.createAuction.fragments.specificAuctionAttributes.DownwardAuctionAttributesFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_number_layout_credit_card_attributes"
        android:layout_width="370dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >




        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_number_edit_text_card_attributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/credit_card_code_phrase"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="15sp"
            android:maxLength="19"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_owner_name_layout_credit_card_attributes"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_number_layout_credit_card_attributes">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_owner_name_edit_text_card_attributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_phrase"
            android:inputType="textCapWords"
            android:textAlignment="center"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_owner_surname_layout_credit_card_attributes"
        android:layout_width="370dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_owner_name_layout_credit_card_attributes">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/card_owner_surname_edit_text_card_attributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname_phrase"
            android:inputType="textCapWords"
            android:textAlignment="center"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expiration_date_layout_credit_card_attributes"
        android:layout_width="370dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_owner_surname_layout_credit_card_attributes">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expiration_date_edit_text_card_attributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expiration_date_hint_phrase"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cvv_layout_credit_card_attributes"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/ic_question_mark_white_24dp"
        app:endIconMode="custom"

        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/expiration_date_layout_credit_card_attributes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cvv_edit_text_credit_card_attributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv_phrase"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textAlignment="center"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buy_button_fragment_summary"
        android:layout_width="120dp"
        android:layout_height="66dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        android:text="@string/go_to_summary_phrase"
        android:textColor="@color/white"
        app:spinning_bar_padding="10dp"
        app:initialCornerAngle="50dp"
        app:spinning_bar_color="@color/white"

        app:layout_constraintEnd_toEndOf="@id/cvv_layout_credit_card_attributes"
        app:layout_constraintTop_toBottomOf="@id/cvv_layout_credit_card_attributes" />
</androidx.constraintlayout.widget.ConstraintLayout>