<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.createAuction.fragments.specificAuctionAttributes.DownwardAuctionAttributesFragment">

    <TextView
        android:id="@+id/initial_price_hint_text_view_downward_auction_attributes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/verdana_bold"
        android:text="@string/initial_price_phrase"
        android:textSize="20sp"

        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/initial_price_edit_text_downward_auction_attributes"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/zero_price"
        android:fontFamily="@font/verdana"
        android:textSize="30sp"
        android:textAlignment="center"
        android:inputType="numberDecimal"

        android:layout_marginTop="30sp"
        app:layout_constraintTop_toTopOf="@id/initial_price_hint_text_view_downward_auction_attributes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />







    <TextView
        android:id="@+id/secret_minimum_price_hint_text_view_downward_auction_attributes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/verdana_bold"
        android:textAlignment="center"
        android:text="@string/secret_minimum_price_phrase"
        android:textSize="20sp"

        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/initial_price_edit_text_downward_auction_attributes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/secret_minimum_price_edit_text_downward_auction_attributes"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/zero_price"
        android:fontFamily="@font/verdana"
        android:textSize="30sp"
        android:textAlignment="center"
        android:inputType="numberDecimal"

        android:layout_marginTop="0sp"
        app:layout_constraintTop_toBottomOf="@id/secret_minimum_price_hint_text_view_downward_auction_attributes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />






    <TextView
        android:id="@+id/decrement_amount_hint_text_view_downward_auction_attributes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/verdana_bold"
        android:textAlignment="center"
        android:text="@string/decrement_amount_phrase"
        android:textSize="20sp"

        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/secret_minimum_price_edit_text_downward_auction_attributes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/decrement_amount_edit_text_downward_auction_attributes"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/zero_price"
        android:fontFamily="@font/verdana"
        android:textSize="30sp"
        android:textAlignment="center"
        android:inputType="numberDecimal"

        android:layout_marginTop="0sp"
        app:layout_constraintTop_toBottomOf="@id/decrement_amount_hint_text_view_downward_auction_attributes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>