<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.createAuction.fragments.userTypeAuctionAttributes.SellerAuctionTypesFragment">

    <!-- Downward Auction -->
    <FrameLayout
        android:id="@+id/frame_layout_downward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/title_text_view_seller_auction_types">

        <ImageView
            android:id="@+id/downaward_auction_type_button_seller_auction_types"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:background="@drawable/rounded_corners_cyan"
            android:src="@drawable/down_chart_arrow"
            android:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/question_mark_seller_downward_auction"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_question_mark_24dp_"
            android:layout_gravity="top|end"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>
    </FrameLayout>

    <!-- Silent Auction -->
    <FrameLayout
        android:id="@+id/frame_layout_silent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/frame_layout_downward">

        <ImageView
            android:id="@+id/silent_auction_type_button_seller_auction_types"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_corners_purple"
            android:src="@drawable/closed_mouth" />

        <ImageView
            android:id="@+id/question_mark_seller_silent_auction"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_question_mark_24dp_"
            android:layout_gravity="top|end"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>
    </FrameLayout>

    <TextView
        android:id="@+id/auction_status_text_view_item_my_silent_auction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silent_phrase"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/verdana_bold"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="2"

        app:layout_constraintBottom_toBottomOf="@id/frame_layout_silent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/downward_text_view_seller_auction_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downward_phrase"
        android:textStyle="bold"
        android:textSize="30sp"
        android:fontFamily="@font/verdana_bold"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="2"

        app:layout_constraintBottom_toBottomOf="@id/frame_layout_downward"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title_text_view_seller_auction_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auction_type_phrase"
        android:fontFamily="@font/verdana_bold"
        android:textSize="25sp"

        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>